--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "reactandsomerandomapi",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,7 +19,6 @@
       "nodemon":"^2.0.7"
   },
   "scripts": {
-    "dev": "nodemon sever/severjs",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
