--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "reactandsomerandomapi",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios":"^0.21.1",
-    "consign":"^0.1.6",
-    "express":"^4.17.1"
-  },
-    "devDependencies":{
-      "nodemon":"^2.0.7"
-  },
+  "name": "node-react",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon sever/severjs",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "client": "cd client && npm start",
+    "server": "node server.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+  },
+  "dependencies": {
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.0"
   }
 }
